--- a/index.html
+++ b/index.html
@@ -1,77 +1,67 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizzería</title>
+    <title>PizzaFron 2.0</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/icono.svg">
+    <link rel="icon" href="img/porcion.svg">
+    <script src="https://kit.fontawesome.com/6e3caa38f0.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
-        <div class="logo"><img src="img/Logo.png" alt="logo pizza"></div>
+        <div class="logo">
+            <img src="img/VectorPizza.svg" alt="Pizza">
+            <h1><span class="verde">Pizza</span>&<span class="rojo">Front</span></h1>
+        </div>
         <nav>
-            <a href="#">
-                <div>Home</div>
-            </a>
-            <a href="#">
-                <div>Ranking</div>
-            </a>
-            <a href="#">
-                <div>Promoción</div>
-            </a>
-            <a href="#">
-                <div>Contacto</div>
-            </a>
+            <label for="checkNav">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox" id="checkNav">
+            <ul>
+                <li>Home</li>
+                <li>Ranking</li>
+                <li>Promoción</li>
+                <li>Contacto</li>
+            </ul>
         </nav>
     </header>
     <main>
-        <section class="banner">
-            <div class="mensaje">
-                <div class="rojo">Envio gratis</div>
-                <div>comprando</div>
-                <div class="rojo">2 pizzas</div>
-            </div>
-            <div class="opciones">
-                <section>
-                    <h2 class="rojo">Podio de pizzas</h2>
-                </section>
-                <div class="contenedor">
-                    <section>
-                        <p>Pizzas top 5</p>
-                        <ol>
-                            <li>Muzzarela</li>
-                            <li>Hawaiana</li>
-                            <li>Muzzarela J&Morrón</li>
-                            <li>Fugazzeta</li>
-                            <li>Calabaresa</li>
-                        </ol>
-                    </section>
-                    <section><img src="img/PizzaFalling.jpg" alt="pizza sabor"></section>
+        <section class="deliveri">
+            <h2>Envio gratis <span>comprando </span>2 pizzas</h2>
+        </section>
+        <section class="podio">
+            <h2>Podio de pizzas</h2>
+            <article>
+                <div>
+                    <h2>Pizzas top 5</h2>
+                    <ol>
+                        <li>Muzzarela</li>
+                        <li>Hawaiana</li>
+                        <li>Muzzarela J&Morron</li>
+                        <li>Fugazzeta</li>
+                        <li>Calabresa</li>
+                    </ol>
                 </div>
-            </div>
+                <img src="img/PizzaFalling.svg" alt="ingredientes pizza">
+            </article>
         </section>
     </main>
     <footer>
-        <div class="enlaces">
-            <a href="#">
-                <article>Home</article>
-            </a>
-            <a href="#">
-                <article>Contacto</article>
-            </a>
-            <a href="#">
-                <article>Ranking</article>
-            </a>
-            <a href="#">
-                <article>Promoción</article>
-            </a>
+        <nav class="navFooter">
+            <ul>
+                <li>Home</li>
+                <li>Contacto</li>
+                <li>Ranking</li>
+                <li>Promoción</li>
+            </ul>
+        </nav>
+        <div>
+            <img src="img/VectorPizza.svg" alt="Pizza">
+            <h2><span class="verde">Pizza</span>&<span class="rojo">Front</span></h2>
         </div>
-        <div><img src="img/Logo.png" alt=""></div>
     </footer>
 </body>
-
 </html>
